lab/rancher/networkpolicy/networkpolicy.yml
#
# kubectl  create deployment nginx --image=nginx
# kubectl  expose deployment nginx --port=80
#
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
      podSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
spec:
  tls:
  - {}
  rules:
  - host: "test.prates.lab"
    http:
      paths:
      - pathType: ImplementationSpecific
        path: "/"
        backend:
          service:
            name: nginx
            port:
              number: 80
#
# kubectl -n default run -it --rm --restart=Never swiss-army-knife --image=rancherlabs/swiss-army-knife -- curl -kL -H 'Host: test.prates.lab' https://ec2-3-228-21-96.compute-1.amazonaws.com
# kubectl -n default run -it --rm --restart=Never swiss-army-knife --image=rancherlabs/swiss-army-knife -- curl http://nginx.defaultA
#
